<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:text="@string/title_of_the_news" />

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/kontak3"
        android:contentDescription="@string/news_image" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:text="@string/description_news" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/comment"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/comment_icon" />

        <TextView
            android:id="@+id/text_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_count"
            android:textSize="14sp"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/share"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/share_icon" />
        <TextView
            android:id="@+id/text_share_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_count"
            android:textSize="14sp"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>
